--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,9 @@
   "description": "Steps to run this project:",
   "dependencies": {
     "@types/cors": "^2.8.10",
-    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.11",
     "@types/nanoid": "^2.1.0",
-    "dotenv": "^8.2.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nanoid": "^3.1.20",
     "pg": "^8.5.1",
