--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "Steps to run this project:",
   "dependencies": {
-    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/express-rate-limit": "^5.1.1",
     "@types/nanoid": "^2.1.0",
-    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.6",
     "nanoid": "^3.1.20",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
